--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@angular/platform-browser-dynamic": "^2.1.0",
     "@angular/router": "^3.1.0",
     "core-js": "^2.4.1",
+    "d3": "^3.5.17",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.1.0",
+    "@types/d3": "^3.5.36",
     "@types/jasmine": "^2.2.30",
+    "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.20-4",
     "codelyzer": "~1.0.0-beta.3",
